--- a/Full-version/full_version.ipynb
+++ b/Full-version/full_version.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.applications.inception_resnet_v2 import InceptionResNetV2\n",
@@ -29,11 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "# Get images\n",
     "X = []\n",
@@ -50,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +104,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "Epoch 1/1\n",
+      "1/1 [==============================] - 121s 121s/step - loss: 0.0084\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1f73a4952b0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def create_inception_embedding(grayscaled_rgb):\n",
     "    grayscaled_rgb_resized = []\n",
@@ -131,9 +169,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\skimage\\color\\colorconv.py:1068: UserWarning: Color data out of range: Z < 0 in 52095 pixels\n",
+      "  return xyz2rgb(lab2xyz(lab, illuminant, observer))\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\skimage\\color\\colorconv.py:1068: UserWarning: Color data out of range: Z < 0 in 63477 pixels\n",
+      "  return xyz2rgb(lab2xyz(lab, illuminant, observer))\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\skimage\\color\\colorconv.py:1068: UserWarning: Color data out of range: Z < 0 in 53398 pixels\n",
+      "  return xyz2rgb(lab2xyz(lab, illuminant, observer))\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\ipykernel_launcher.py:20: UserWarning: result/img_2.png is a low contrast image\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\skimage\\color\\colorconv.py:1068: UserWarning: Color data out of range: Z < 0 in 34762 pixels\n",
+      "  return xyz2rgb(lab2xyz(lab, illuminant, observer))\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\skimage\\color\\colorconv.py:1068: UserWarning: Color data out of range: Z < 0 in 64163 pixels\n",
+      "  return xyz2rgb(lab2xyz(lab, illuminant, observer))\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\ipykernel_launcher.py:20: UserWarning: result/img_4.png is a low contrast image\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\skimage\\color\\colorconv.py:1068: UserWarning: Color data out of range: Z < 0 in 34189 pixels\n",
+      "  return xyz2rgb(lab2xyz(lab, illuminant, observer))\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\ipykernel_launcher.py:20: UserWarning: result/img_5.png is a low contrast image\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\skimage\\color\\colorconv.py:1068: UserWarning: Color data out of range: Z < 0 in 30082 pixels\n",
+      "  return xyz2rgb(lab2xyz(lab, illuminant, observer))\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\ipykernel_launcher.py:20: UserWarning: result/img_6.png is a low contrast image\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n",
+      "C:\\Users\\lenovo\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\skimage\\color\\colorconv.py:1068: UserWarning: Color data out of range: Z < 0 in 24008 pixels\n",
+      "  return xyz2rgb(lab2xyz(lab, illuminant, observer))\n",
+      "Lossy conversion from float64 to uint8. Range [0, 1]. Convert image to uint8 prior to saving to suppress this warning.\n"
+     ]
+    }
+   ],
    "source": [
     "color_me = []\n",
     "for filename in os.listdir('Test/'):\n",
@@ -174,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
